@@ -1,3 +1,14 @@
+2013-04-26  Alexey Proskuryakov  <ap@apple.com>
+
+        [WK2] WKContextClient doesn't need to be versioned yet
+        https://bugs.webkit.org/show_bug.cgi?id=115279
+
+        Reviewed by Anders Carlsson.
+
+        * Shared/APIClientTraits.cpp:
+        * Shared/APIClientTraits.h:
+        * UIProcess/API/C/WKContext.h:
+
 2013-04-26  Anders Carlsson  <andersca@apple.com>
 
         Downloads need to be converted from the NSURLConnection, not canceled and restarted, when using the NetworkProcess
